# JSONLib

./: CMakeLists.txt  example.c
common/: common.c  common.h  error.h
parse/: parse.c  parse.h
serialize/: serialize.c  serialize.h
test/: test_CRUD.c  test_parse_array.c  test_parse_object.c  test_parse_string.c  test_serialize.c
